fix(network-loading-css): Increase z-index on Form modal

--- a/app/components/Form/Form.scss
+++ b/app/components/Form/Form.scss
@@ -13,7 +13,7 @@
 
   &.open {
     opacity: 1;
-    z-index: 10;
+    z-index: 20;
   }
 }
 
